--- a/moreanimations.css
+++ b/moreanimations.css
@@ -27,6 +27,16 @@
     }
 }
 
+@keyframes appear {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+.image1, .image2 {
+    animation: appear;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+}
+
 h1.special-header {
     animation: SlideinLeft;
     animation-duration: 1s;
